--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -19,6 +19,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap');
 
+/* Crown Theme Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+
+/* OPTI Tomaso Font - Premium Font */
+@font-face {
+  font-family: 'OPTI Tomaso';
+  src: url('/fonts/OPTI-Tomaso.woff2') format('woff2'),
+       url('/fonts/OPTI-Tomaso.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 /* Corporate Red Theme Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&display=swap');
