--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -41,6 +41,7 @@ const {
     <nav class="hidden md:flex space-x-6">
       <a href="#top" class={`${textColor} hover:${hoverColor} transition-colors`}>Home</a>
       <a href="#features" class={`${textColor} hover:${hoverColor} transition-colors`}>Features</a>
+      <a href="#social-proof" class={`${textColor} hover:${hoverColor} transition-colors`}>Success Stories</a>
       <a href="#tools" class={`${textColor} hover:${hoverColor} transition-colors`}>Tools</a>
       <a href="#team" class={`${textColor} hover:${hoverColor} transition-colors`}>Team</a>
       <a href="#pricing" class={`${textColor} hover:${hoverColor} transition-colors`}>Pricing</a>
@@ -69,6 +70,7 @@ const {
     <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
       <a href="#top" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Home</a>
       <a href="#features" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Features</a>
+      <a href="#social-proof" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Success Stories</a>
       <a href="#tools" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Tools</a>
       <a href="#team" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Team</a>
       <a href="#pricing" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Pricing</a>
