what we fix section

--- a/src/pages/clients/crown/index.astro
+++ b/src/pages/clients/crown/index.astro
@@ -3,7 +3,7 @@ import Layout from '@layouts/Layout.astro';
 import Header from '@components/layout/Header.astro';
 import Footer from '@components/layout/Footer.astro';
 import HeroSection from '@components/clients/crown/HeroSection.astro';
-import FeaturesSection from '@components/clients/crown/FeaturesSection.astro';
+import WhatWeFixSection from '@components/clients/crown/WhatWeFixSection.astro';
 import SocialProofSection from '@components/clients/crown/SocialProofSection.astro';
 import PricingSection from '@components/sections/PricingSection.astro';
 import TestimonialsSection from '@components/sections/TestimonialsSection.astro';
@@ -28,7 +28,7 @@ const clientTheme = 'theme-crown';
 	
 	<main>
 		<HeroSection />
-		<FeaturesSection />
+		<WhatWeFixSection />
 		<SocialProofSection />
 		<ToolsSection />
 		<TeamSection />
