--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -40,7 +40,7 @@ const {
     <!-- Navigation -->
     <nav class="hidden md:flex space-x-6">
       <a href="#top" class={`${textColor} hover:${hoverColor} transition-colors`}>Home</a>
-      <a href="#features" class={`${textColor} hover:${hoverColor} transition-colors`}>Features</a>
+      <a href="#what-we-fix" class={`${textColor} hover:${hoverColor} transition-colors`}>What We Fix</a>
       <a href="#social-proof" class={`${textColor} hover:${hoverColor} transition-colors`}>Success Stories</a>
       <a href="#tools" class={`${textColor} hover:${hoverColor} transition-colors`}>Tools</a>
       <a href="#team" class={`${textColor} hover:${hoverColor} transition-colors`}>Team</a>
@@ -69,7 +69,7 @@ const {
   <div id="mobile-menu" class={`hidden md:hidden ${bgColor.replace('/90', '')} w-full border-t`}>
     <div class="container mx-auto px-4 py-3 flex flex-col space-y-3">
       <a href="#top" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Home</a>
-      <a href="#features" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Features</a>
+      <a href="#what-we-fix" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>What We Fix</a>
       <a href="#social-proof" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Success Stories</a>
       <a href="#tools" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Tools</a>
       <a href="#team" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Team</a>
