created agitation section

--- a/src/pages/clients/crown/index.astro
+++ b/src/pages/clients/crown/index.astro
@@ -4,6 +4,7 @@ import Header from '@components/layout/Header.astro';
 import Footer from '@components/layout/Footer.astro';
 import HeroSection from '@components/clients/crown/HeroSection.astro';
 import WhatWeFixSection from '@components/clients/crown/WhatWeFixSection.astro';
+import AgitationSection from '@components/clients/crown/AgitationSection.astro';
 import SocialProofSection from '@components/clients/crown/SocialProofSection.astro';
 import PricingSection from '@components/sections/PricingSection.astro';
 import TestimonialsSection from '@components/sections/TestimonialsSection.astro';
@@ -29,6 +30,7 @@ const clientTheme = 'theme-crown';
 	<main>
 		<HeroSection />
 		<WhatWeFixSection />
+		<AgitationSection />
 		<SocialProofSection />
 		<ToolsSection />
 		<TeamSection />
