--- a/src/pages/clients/crown/index.astro
+++ b/src/pages/clients/crown/index.astro
@@ -6,6 +6,7 @@ import HeroSection from '@components/clients/crown/HeroSection.astro';
 import WhatWeFixSection from '@components/clients/crown/WhatWeFixSection.astro';
 import AgitationSection from '@components/clients/crown/AgitationSection.astro';
 import SocialProofSection from '@components/clients/crown/SocialProofSection.astro';
+import HighlightedQuoteSection from '@components/clients/crown/HighlightedQuoteSection.astro';
 import PricingSection from '@components/sections/PricingSection.astro';
 import TestimonialsSection from '@components/sections/TestimonialsSection.astro';
 import ContactSection from '@components/sections/ContactSection.astro';
@@ -32,6 +33,7 @@ const clientTheme = 'theme-crown';
 		<WhatWeFixSection />
 		<AgitationSection />
 		<SocialProofSection />
+		<HighlightedQuoteSection />
 		<ToolsSection />
 		<TeamSection />
 		<CompetitorsSection />
