value comparision section

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -42,6 +42,7 @@ const {
       <a href="#top" class={`${textColor} hover:${hoverColor} transition-colors`}>Home</a>
       <a href="#what-we-fix" class={`${textColor} hover:${hoverColor} transition-colors`}>What We Fix</a>
       <a href="#agitation" class={`${textColor} hover:${hoverColor} transition-colors`}>Reality Check</a>
+      <a href="#services" class={`${textColor} hover:${hoverColor} transition-colors`}>Services</a>
       <a href="#social-proof" class={`${textColor} hover:${hoverColor} transition-colors`}>Success Stories</a>
       <a href="#tools" class={`${textColor} hover:${hoverColor} transition-colors`}>Tools</a>
       <a href="#team" class={`${textColor} hover:${hoverColor} transition-colors`}>Team</a>
@@ -72,6 +73,7 @@ const {
       <a href="#top" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Home</a>
       <a href="#what-we-fix" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>What We Fix</a>
       <a href="#agitation" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Reality Check</a>
+      <a href="#services" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Services</a>
       <a href="#social-proof" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Success Stories</a>
       <a href="#tools" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Tools</a>
       <a href="#team" class={`${textColor} hover:${hoverColor} py-2 transition-colors`}>Team</a>
