--- a/src/pages/clients/crown/index.astro
+++ b/src/pages/clients/crown/index.astro
@@ -15,6 +15,8 @@ import TeamSection from '@components/sections/TeamSection.astro';
 import CompetitorsSection from '@components/sections/CompetitorsSection.astro';
 import PartnersSection from '@components/sections/PartnersSection.astro';
 import FAQSection from '@components/sections/FAQSection.astro';
+import ServicesSection from '@components/clients/crown/ServicesSection.astro';
+import ValueComparisonSection from '@components/clients/crown/ValueComparisonSection.astro';
 
 // Set Crown client theme - using custom Crown theme
 const clientTheme = 'theme-crown';
@@ -34,6 +36,8 @@ const clientTheme = 'theme-crown';
 		<AgitationSection />
 		<SocialProofSection />
 		<HighlightedQuoteSection />
+		<ServicesSection />
+		<ValueComparisonSection />
 		<ToolsSection />
 		<TeamSection />
 		<CompetitorsSection />
